bk_ida/gccida/c1/_cpp_get_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2457:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 * cpp_get_buff( cpp_reader_0 *pfile, size_t min_size) 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2457:29: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
_cpp_buff_0 * cpp_get_buff( cpp_reader_0 *pfile, size_t min_size) 
                            ^~~~~~~~~~~~
                            cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2459:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v2; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2460:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v3; // r15 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2461:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2477:32: error: expected expression
p_free_buffs = ( _cpp_buff_0 **)*p_free_buffs; 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/cpplex.c:2477:18: error: use of undeclared identifier '_cpp_buff_0'
p_free_buffs = ( _cpp_buff_0 **)*p_free_buffs; 
                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/_cpp_get_buff/src/obj/cpplex.o] Error 1
